@@ -125,6 +125,10 @@ The property to edit.
 
 Add a DOM id to the control. Optional. Will be autogenerated if not set.
 
+=item wrap
+
+Optional. Defaults to false. If set to true it will display the date, time, and zone as 3 fields that separately wrap to work better in tight spaces.
+
 =back
 
 
